--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,6 +8,7 @@ dj-rest-auth==4.0.0
 Django==4.2.1
 django-allauth==0.52.0
 django-cors-headers==4.0.0
+django-extensions==3.2.1
 djangorestframework==3.14.0
 idna==3.4
 oauthlib==3.2.2
