--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 certifi==2023.5.7
 cffi==1.15.1
+chardet==3.0.4
 charset-normalizer==3.1.0
 cryptography==40.0.2
 defusedxml==0.7.1
@@ -10,7 +11,16 @@ django-allauth==0.52.0
 django-cors-headers==4.0.0
 django-extensions==3.2.1
 djangorestframework==3.14.0
-idna==3.4
+googletrans==3.1.0a0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2023.1.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
+langdetect==1.0.9
 oauthlib==3.2.2
 pycparser==2.21
 PyJWT==2.7.0
@@ -18,6 +28,9 @@ python3-openid==3.2.0
 pytz==2023.3
 requests==2.30.0
 requests-oauthlib==1.3.1
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.3.0
 sqlparse==0.4.4
 tzdata==2023.3
 urllib3==2.0.2
