--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,6 +11,8 @@ django-cors-headers==4.0.0
 django-extensions==3.2.1
 djangorestframework==3.14.0
 idna==3.4
+langid==1.1.6
+numpy==1.24.3
 oauthlib==3.2.2
 pycparser==2.21
 PyJWT==2.7.0
